Template for Zabbix 7.0 update

--- a/7.0/zbx_export_templates.yaml
+++ b/7.0/zbx_export_templates.yaml
@@ -19,20 +19,20 @@ zabbix_export:
       items:
         - uuid: 6cf38624d40d4d248238531d48778768
           name: 'Updates available'
-          key: ubuntu_updates.package
+          key: debian_updates.package
           value_type: FLOAT
           triggers:
             - uuid: c746feebdf004dafbbbd9e2ec1a14d9e
-              expression: 'abs(last(/Debian Updates check/ubuntu_updates.package))>0'
+              expression: 'abs(last(/Debian Updates check/debian_updates.package))>0'
               name: 'Updates available'
               priority: INFO
         - uuid: c94ec880091e4e76bd5b9f9961b19333
           name: 'Security Updates available'
-          key: ubuntu_updates.security
+          key: debian_updates.security
           value_type: FLOAT
           triggers:
             - uuid: 777e69742fa0435db4e459127cbd6264
-              expression: 'abs(last(/Debian Updates check/ubuntu_updates.security))>0'
+              expression: 'abs(last(/Debian Updates check/debian_updates.security))>0'
               name: 'Security Updates available'
               priority: INFO
   graphs:
@@ -43,10 +43,10 @@ zabbix_export:
           calc_fnc: ALL
           item:
             host: 'Debian Updates check'
-            key: ubuntu_updates.package
+            key: debian_updates.package
         - sortorder: '1'
           color: 199C0D
           calc_fnc: ALL
           item:
             host: 'Debian Updates check'
-            key: ubuntu_updates.security
+            key: debian_updates.security
